tests/miniJava/neg/006274_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while ( Main 0 ) { } } }
